fluxcd/apps/base/paperless/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    enable-backup: "true"
